# Machine_Learning_Portfolio

./: .gitignore  Readme.md  pyproject.toml
01_House_Prices_-_Linear_Regression/: model.ipynb
01_Linear_Regression/: model.ipynb  requirements.txt
02_House_Prices_-_Ensemble_Methods/: data_description.txt  model.ipynb
