[tool.poetry]
name = "Machine Learning Portfolio"
version = "0.1"
description = ""
authors = ["Samuel Weller"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.12.2"
pandas = "^1.5.3"
numpy = "^1.24.2"
missingno = "^0.5.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
statsmodels = "^0.13.5"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
